<resources>
    <string name="tv1_TambahPelanggan">Tambah Pelanggan</string>
    <string name="validasi_nama_pelanggan">Nama Tidak Boleh Kosong</string>
    <string name="validasi_alamat_pelanggan">Alamat Tidak Boleh Kosong</string>
    <string name="validasi_noHP_pelanggan">No Hp Tidak Boleh Kosong</string>
    <string name="validasi_Cabang_pelanggan">Nama Cabang Tidak Boleh Kosong</string>
    <string name="app_name">Laundry</string>
    <string name="tv1_TambahPegawai">Tambah Pegawai</string>
    <string name="validasi_nama_pegawai">Nama Tidak Boleh Kosong</string>
    <string name="validasi_alamat_pegawai">Alamat Tidak Boleh Kosong</string>
    <string name="validasi_noHP_pegawai">No Hp Tidak Boleh Kosong</string>
    <string name="validasi_Cabang_pegawai">Nama Cabang Tidak Boleh Kosong</string>
    <string name="JUDULCABANG">Cabang</string>
    <string name="ID_Transaksi">ID Transaksi</string>
    <string name="Tanggal">Tanggal</string>
    <string name="Pesanan">Pesanan</string>
    <string name="Karyawan">Karyawan</string>
    <string name="Nama_Layanan">Nama_Layanan</string>
    <string name="Harga">Harga</string>
    <string name="Rincian_Tambahan">Rincian Tambahan</string>
    <string name="Edit_Pegawai">Edit Pegawai</string>
    <string name="Nama_Lengkap">Nama Lengkap</string>
    <string name="Masukkan_Nama_Pegawai">Masukkan Nama Pegawai</string>
    <string name="Alamat">Alamat</string>
    <string name="Masukkan_Alamat_Pegawai">Masukkan Alamat Pegawai</string>
    <string name="No_HP">No Handphone</string>
    <string name="Masukkan_Nomor_HP">Masukkan Nomor Handphone</string>
    <string name="Masukkan_nama_cabang">Masukkan nama cabang</string>
    <string name="Sunting">Sunting</string>
    <string name="Edit_Pelanggan">Edit Pelanggan</string>
    <string name="Masukkan_Nama_Pelanggan">Masukkan Nama Pelanggan</string>
    <string name="Masukkan_Alamat_Pelanggan">Masukkan Alamat Pelanggan</string>
    <string name="Konfirmasi_Data">Konfirmasi Data</string>
    <string name="Nama_Pelanggan">Nama Pelanggan</string>
    <string name="SelamatDatang">Selamat Datang</string>
    <string name="SilahkanLogin">Silahkan Login Untuk Melanjutkan</string>
    <string name="Password">Sandi</string>
    <string name="Login">Masuk</string>
    <string name="Sapaan">Selamat Pagi, Linn</string>
    <string name="EstimasiHariIni">Estimasi Hari Ini</string>
    <string name="Semangat">Semangat ya Bestie!</string>
    <string name="Melayani">Melayani dengan Setengah Hati</string>
    <string name="Akun">Akun</string>
    <string name="Account">Account</string>
    <string name="Pegawai">Pegawai</string>
    <string name="Employee">Pegawai</string>
    <string name="Layanan">Layanan</string>
    <string name="Service">Service</string>
    <string name="Cabang">Cabang</string>
    <string name="Branch">Branch</string>
    <string name="Cetak">Cetak</string>
    <string name="Print">Print</string>
    <string name="Tambah_Cabang">Tambah Cabang</string>
    <string name="Nama_Cabang">Nama Cabang</string>
    <string name="Masukkan_Alamat">Masukkan Alamat</string>
    <string name="masukkanlayanan">Masukkan Layanan</string>
    <string name="Simpan">Simpan</string>
    <string name="Tambah_Layanan">Tambah Layanan</string>
    <string name="Masukkan_Nama_Layanan">Masukkan Nama Layanan</string>
    <string name="MASUKAN_HARGA">Masukan Harga</string>
    <string name="EDITLayanan">Edit Layanan</string>
    <string name="Pembayaran">Payment</string>
    <string name="metode">Pilih Metode Pembayaran</string>
    <string name="Bayar_Nanti">Bayar Nanti</string>
    <string name="Tunai">Tunai</string>
    <string name="Batal">Batal</string>
    <string name="ID_Tambahan">ID Tambahan</string>
    <string name="Nama_Tambahan">Nama Tambahan</string>
    <string name="Nama_Tambahannya">Nama Tambahan :</string>
    <string name="ID_Pelanggan">ID Pelanggan</string>
    <string name="Terdaftar">Terdaftar</string>
    <string name="Hubungi">Hubungi</string>
    <string name="Lihat">Lihat</string>
    <string name="id_layanan">ID Layanan</string>
    <string name="total">Total Bayar :</string>
    <string name="Kirim">Kirim WhatsApp</string>
    <string name="Tambah_Pelanggan">Tambah Pelanggan</string>
    <string name="TambahTambahan">Tambah Tambahan</string>
    <string name="masukkantambahan">Masukkan Tambahan</string>
    <string name="Data_Pelanggan">Data Pelanggan</string>
    <string name="Pilih_Pelanggan">Pilih Pelanggan</string>
    <string name="Layanan_Utama">Layanan Utama</string>
    <string name="Pilih_Layanan">Pilih Layanan</string>
    <string name="Layanan_Tambahan">Layanan Tambahan</string>
    <string name="Tambah">Tambah</string>
    <string name="Proses">Proses</string>
    <string name="Id_cabang">ID Cabang</string>
    <string name="Layananada">Layanan yang tersedia</string>
    <string name="ID_PEGAWAI">ID Pegawai</string>
    <string name="nama">Nama</string>
</resources>