<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCARD_PELANGGAN"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/button">

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/ID_Pelanggan"
            android:textColor="@color/text"
            android:textSize="18dp"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_Nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Nama_Pelanggan"
            android:textColor="@color/text"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_Almt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Alamat"
            android:textStyle="normal"
            android:textColor="@color/text"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/tvCARD_PELANGGAN_NoHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/No_HP"
            android:textColor="@color/text"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_cabang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Cabang"
            android:textColor="@color/text"
            android:textSize="18dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Terdaftar"
            android:textColor="@color/text"
            android:textSize="18dp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_HUBUNGI"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="Hubungi"
                android:textSize="18dp"
                android:textStyle="normal"
                android:backgroundTint="#FFE99A"
                android:textColor="@color/text"/>

            <Button
                android:id="@+id/btn_LIHAT"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/text"
                android:text="@string/Lihat"
                android:textSize="18dp"
                android:backgroundTint="#B9D4AA"/>


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>